assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Josefin+Slab&display=swap");

body {
  background-color: #fafafa;
  margin: 0;
  padding: 0;
  font-family: "Josefin Slab", sans-serif;
  font-size: 1.2rem;
  color: #383838;
}

.row {
  margin: 0;
}

/* --------------------------------------------- HEADINGS */

h2 {
  font-family: "Fredericka the Great", sans-serif;
  font-size: 2.3rem;
}

.h2-title i {
  margin-bottom: 0px;
  line-height: 30px;
}

/* --------------------------------------------- BLOCK DIVIDERS */

.block-divider {
  width: 9rem;
  height: 1px;
  background-color: #fafafa;
}

.hr-callout {
    margin-top: 25px;
    margin-bottom: 35px;
}

.hr-dotted {
  border-top: 2px dotted;
  width: 90%;
  padding-bottom: 20px;
  height: 5px;
}

.hr-dotted--red {
  color: #a13232;
}

.hr-dotted--white {
  color: #fafafa;
}

.hr-extras {
  width: 150px;
  height: 0.5px;
  border: 0;
  background-color: #fafafa;
  margin-bottom: 10px;
  margin-top: 10px;
}

.hr-about {
  border-top: 2px dotted;
  width: 130px;
}

.hr-about-top, .hr-about-bottom {
    padding-bottom: 2px;
}

/* --------------------------------------------- BUTTONS */

.btn--book {
  font-weight: bold;
  border-radius: 12px;
  width: 180px;
  text-transform: uppercase;
  line-height: 2.5;
  margin-top: 10px;
}

.btn--red {
  color: #fafafa;
  background-color: #a1323293;
  border: 2px solid #a13232;
}

.btn--red:hover,
.btn--red:active,
.btn--red:focus,
.btn--red:active:focus {
  background-color: #701515;
  border: 2px solid #701515;
}

.btn--white {
  color: #383838;
  background-color: #fafafa;
  border: 2px solid #a13232;
  margin-top: 20px;
}

.btn--white:hover,
.btn--white:active,
.btn--white:focus,
.btn--white:active:focus {
  background-color: #701515;
  border: 2px solid #701515;
}

.history-button {
  font-size: 1.1rem;
  font-weight: bold;
  border-radius: 10px;
  width: 140px;
  line-height: 2;
  color: #fafafa;
  background-color: #a13232;
}

.history-button:hover,
.history-button:active,
.history-button:focus,
.history-button:active:focus {
  background-color: #701515;
}

/* --------------------------------------------- CONTENT CONTAINERS */

.content-container {
  padding-top: 75px;
  padding-bottom: 75px;
}

.container-wrapper--reservation {
  background-color: #a13232;
  color: #fafafa;
}

/* --------------------------------------------- HEADER */

.navbar {
  padding: 0.55rem;
  z-index: 5;
}

.navbar-color {
  background-color: #701515;
}

.page-header {
  margin-bottom: 0;
  border-bottom: 0;
  text-align: center;
}

.page-header h2 {
  margin-top: 0;
}

/* --------------------------------------------- HEADER: LOGO */

.logo {
  font-family: "Fredericka the Great", sans-serif;
  font-size: 2rem;
  margin-left: 1rem;
}

/* --------------------------------------------- HEADER: NAVBAR */

.navbar-toggler {
  color: #fafafa;
  padding: 0.25rem 0.55rem;
  font-size: 1rem;
  line-height: 1;
  background-color: transparent;
  border: 3px dotted #fafafa;
  border-radius: 0.3rem;
}

.navbar .navbar-toggler {
  margin: 0;
}

.navbar-nav .nav-link {
  padding: 4px 12px;
  font-size: 1.1rem;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.nav-link {
  padding-right: 7%;
}

/* --------------------------------------------- SECTION: CALLOUT */

.callout-container {
  height: 100vh;
  background: url(../images/home-bg.jpg) no-repeat center center fixed;
  background-size: cover;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative;
}

#jumbotron-container {
    height: 100%;
    padding-top: 160px;
} 

.jumbotron {
  background-color: transparent;
}

.jumbotron-header {
  color: #fafafa;
  font-size: 5rem;
  margin-bottom: 30px;
  font-family: "Fredericka the Great", sans-serif;
}

.jumbotron p {
  font-size: 1.8rem;
  color: #fafafa;
  margin-top: 2rem;
}

.welcome {
  font-size: 2rem;
  font-family: "Josefin Slab", sans-serif;
}

.opaque-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 1;
}

/* --------------------------------------------- SECTION: HISTORY */

.history-section {
  vertical-align: middle;
}

.history-pic img {
  width: 100%;
  margin: 18px 0;
  border-radius: 10px;
}

.history-text {
  margin: auto 0;
  padding: 10px;
}

/* --------------------------------------------- SECTION: MAKE A RESERVATION */

.reservation p {
  margin: 20px 0 40px 0;
}

.reservation-form label {
  margin-bottom: 0.1rem;
}

.text-area {
  margin-bottom: 1.6px;
}

.h2-title i {
  margin-bottom: 20px;
}

/* --------------------------------------------- SECTION: WHERE TO FIND US */

.location a {
  text-decoration: none;
  color: #383838;
}

.location a:hover {
  color: #a13232;
}

.location-text p {
  margin: auto 0;
  padding: 10px;
}

.location-map iframe {
  margin-top: 10px;
  border-radius: 10px;
  border-style: none;
  width: 100%;
  height: 300px;
}

/* --------------------------------------------- FOOTER */

.footer-bg {
  background: url(../images/miniblackboard.jpg);
  z-index: 1;
}

.footer-element {
  text-align: center;
  vertical-align: center;
  margin: 20px 0;
  color: #fafafa;
  font-size: 20px;
}

.footer-address address {
  font-size: 80%;
  line-height: 19px;
  margin-top: 1.8rem;
}

.footer-address a {
  text-decoration: none;
  color: #fafafa;
}

.footer-address a:hover {
  color: #a13232;
}

.footer-logo img {
  border-radius: 50%;
  width: 100%;
  height: auto;
  max-width: 140px;
  max-height: 140px;
}

.footer-social {
  margin-top: 2.2rem;
}

.social-media li a i {
  color: #fafafa;
  background-color: #a13232;
  font-size: 25px;
  width: 40px;
  height: 40px;
  padding: 12px 0;
  border-radius: 25%;
  line-height: 16px;
  text-align: center;
  transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
}

.social-media li a i:hover {
  color: #a13232;
  background-color: #fafafa;
}

/* --------------------------------------------- PAGE HEADERS */

.page-heading {
  height: 60vh;
  padding: 100px 0;
  background-size: cover;
}

.page-heading-menu {
  background: url(../images/menu-bg.jpg) no-repeat center center fixed;
  background-size: cover;
}

.page-heading-about {
  background: url(../images/about-us-bg.jpg) no-repeat center center fixed;
  background-size: cover;
}

.page-heading-contact {
  background: url(../images/contact-bg.jpg) no-repeat center center fixed;
  background-size: cover;
}

.page-title {
  font-family: "Fredericka the Great", sans-serif;
  font-size: 4.5rem;
  color: #fafafa;
}

.opaque-overlay-heading {
  background-color: rgba(0, 0, 0, 0.4);
  height: 60vh;
  width: 100%;
  position: absolute;
  top: 0;
  z-index: 2;
  padding: 100px 0;
}

#heading-container {
    height: 100%;
    padding-top: 80px;
}

/* --------------------------------------------- ABOUT US PAGE */

.about-container {
  background-color: #a13232;
  color: #fafafa;
}

.about-title h3 {
    font-size: 3rem;
    text-align: center;
    padding: 30px 0;
}

.introduction {
  padding-top: 50px;
}

.introduction-text p {
    margin: 40px auto;
}

.family-member {
    margin-bottom: 35px;
}

.family-member img {
  height: 200px;
  width: 200px;
  border-radius: 50%;
  -o-object-fit: cover;
     object-fit: cover;
}

.family-member h4 {
  padding-top: 40px;
  padding-bottom: 20px;
  font-family: "Fredericka the Great", sans-serif;
  font-size: 2rem;
}

/* --------------------------------------------- MENU PAGE */

.menu-container {
  color: #fafafa;
  font-size: 0.85rem;
}

.menu-container-bg {
  background: url(../images/blackboard.jpg);
  width: 100%;
  height: 100%;
}

.panel-heading a{
  text-decoration: none;
  color: #fafafa;
}

.menu-area-title {
  margin: 30px 0;
  font-size: 2.5rem;
  padding-top: 40px;
}

.menu-item {
  margin: 10px 0;
}

.menu-item h5 {
  text-transform: uppercase;
  font-weight: bold;
}

.item-price {
  font-size: 0.6rem;
  font-weight: normal;
}

.item-specification {
  background-color: #701515;
  border-radius: 50%;
  border: 1px solid #701515;
  padding: 4px;
  font-size: 0.6rem;
  font-weight: bold;
}

.insalate-extras,
.pizze-extras {
  margin-bottom: 20px;
}

.insalate-extras,
.pizze-extras p {
  margin: 5px 20px;
}

/* --------------------------------------------- CONTACT PAGE */

.contact-container {
  background-color: #a13232;
  color: #fafafa;
}

.contact-form {
  padding-top: 30px;
}

.reservation-link {
  color: #fafafa;
  margin-top: 40px;
  font-size: 1.4rem;
}

.reservation-link a {
  text-decoration: none;
  font-weight: bold;
  color: #fafafa;
}

.location-map-contact iframe {
  margin-top: 30px;
  border-radius: 10px;
  border-style: none;
  width: 100%;
  height: 300px;
}

/* --------------------------------------------- MEDIA QUERIES */

@media (max-width: 768px) {
   #heading-container {
      padding-top: 1.8rem;
   }
}

@media screen and (max-device-width: 768px) and (orientation: landscape) {
    #heading-container {
      padding-top: 0;
   }
}

@media screen and (max-width: 768px) {
   #jumbotron-container {
      padding-top: 3rem;
   }
}

@media screen and (max-device-width: 768px) and (orientation: landscape) {
   .jumbotron-header {
        font-size: 4rem;
        margin-bottom: 0;
    }
}

@media (min-width: 768px) {
  .collapse.dont-collapse-sm {
    display: block;
    height: auto !important;
    visibility: visible;
  }
}

@media (max-width: 767px) {
   .menu-area-title {
      margin: 0;
      font-size: 2rem;
      padding-top: 0;
   }
}

